fixed plugin, now it generates method in bytecode